--- a/src/assets/tpl/success.htm
+++ b/src/assets/tpl/success.htm
@@ -1,19 +1,45 @@
-<html>
+<html lang="zh-cn">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>提示消息</title>
     <style type="text/css">
-        body{ font:75% Arail; text-align:center; }
+        body {
+            font: 75% Arail;
+            text-align: center;
+        }
 
-        #notice{ width:300px;border:1px solid #BBB; background:#EEE; padding:3px; position:absolute; left:50%; top:50%; margin-left:-155px; margin-top:-100px; }
+        #notice {
+            width: 300px;
+            border: 1px solid #BBB;
+            background: #EEE;
+            padding: 3px;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            margin-left: -155px;
+            margin-top: -100px;
+        }
 
-        #notice div{ background:#FFF; padding:30px 0 20px; font-size:1.2em; font-weight:bold }
+        #notice div {
+            background: #FFF;
+            padding: 30px 0 20px;
+            font-size: 1.2em;
+            font-weight: bold
+        }
 
-        #notice p{ background:#FFF; margin:0; padding:0 0 20px; }
+        #notice p {
+            background: #FFF;
+            margin: 0;
+            padding: 0 0 20px;
+        }
 
-        a{ color:#f00}
+        a {
+            color: #f00
+        }
 
-        a:hover{ text-decoration:none; }
+        a:hover {
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
