--- a/src/assets/tpl/upgrade.htm
+++ b/src/assets/tpl/upgrade.htm
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <style>
-.ts-upgrade {width: 451px;height: 400px;text-align: center;font-size: 18px;font-family: "PingFangSC-Regular";position: absolute;top: 50%;left: 50%;margin-left: -225px;*margin-left: -225px;_margin-left: -225px;margin-top: -200px;*margin-top: -200px;_margin-top: -200px;}
+.ts-upgrade {width: 451px;height: 400px;text-align: center;font-size: 18px;font-family: "PingFangSC-Regular",sans-serif;position: absolute;top: 50%;left: 50%;margin-left: -225px;*margin-left: -225px;_margin-left: -225px;margin-top: -200px;*margin-top: -200px;_margin-top: -200px;}
 .ts-img {display: inline-block;margin-bottom: 20px;*margin-bottom: 20px;_margin-bottom: 20px;}
 
 .ts-tips {color: #666;line-height: 21px;margin-bottom: 10px;*margin-bottom: 10px;_margin-bottom: 10px;margin-top: 10px;*margin-top: 10px;_margin-top: 10px;}
