--- a/src/assets/tpl/navigation-responsive.htm
+++ b/src/assets/tpl/navigation-responsive.htm
@@ -83,7 +83,7 @@
                         <li>
                             <a href="#" class="tpl-dropdown-content-message">
                                 <span class="tpl-dropdown-content-photo">
-                      <img src="//open.tianfu.ink/libs/amazeui/images/user02.png" alt=""> </span>
+                      <img src="https://res.tianfu.pub/amazeui/images/user02.png" alt=""> </span>
                                 <span class="tpl-dropdown-content-subject">
                       <span class="tpl-dropdown-content-from"> 禁言小张 </span>
                                 <span class="tpl-dropdown-content-time">10分钟前 </span>
@@ -92,7 +92,7 @@
                             </a>
                             <a href="#" class="tpl-dropdown-content-message">
                                 <span class="tpl-dropdown-content-photo">
-                      <img src="//open.tianfu.ink/libs/amazeui/images/user03.png" alt=""> </span>
+                      <img src="https://res.tianfu.pub/amazeui/images/user03.png" alt=""> </span>
                                 <span class="tpl-dropdown-content-subject">
                       <span class="tpl-dropdown-content-from"> Steam </span>
                                 <span class="tpl-dropdown-content-time">18分钟前</span>
