--- a/src/assets/tpl/footer.htm
+++ b/src/assets/tpl/footer.htm
@@ -15,7 +15,7 @@
 <{/if}>
 <{if $Request.env.APP_DEBUG and !empty($Request.session.gid) and $Request.session.gid lt 10 and $Request.session.system.vconsole eq 1}>
 <!-- 引入vConsole的JS库 -->
-<script type="text/javascript" charset="utf-8" src="//open.tianfu.ink/libs/debug/script/vconsole.min.js?v=3.2.2"></script>
+<script type="text/javascript" charset="utf-8" src="https://res.tianfu.pub/debug/script/vconsole.min.js?v=3.2.2"></script>
 <script type="text/javascript">
     window.vConsole = new window.VConsole();
     console.info("欢迎使用 vConsole。vConsole 是一个由微信公众平台前端团队研发的 Web 前端开发者面板，可用于展示 console 日志，方便开发、调试。");
