增加获取设备类型 Os::getDeviceType

--- a/src/assets/tpl/navigation-responsive.htm
+++ b/src/assets/tpl/navigation-responsive.htm
@@ -189,7 +189,7 @@
      data-project="<{$Request.server.script_name|substr='1','-4'|lower}>"
      data-controller="<{$Request.controller|lower}>"
      data-action="<{$Request.action|lower}>"
-     data-url="<{$Think.config.auth.host}>/api.php/ram/sidebar?action=list&type=sidebar&poolid=<{$Think.config.auth.poolid|default=''}>&appid=<{$Think.config.auth.appid|default=''}>&roleid=<{$Request.session.union.roleid|default='404'}>&cache=<{$Request.get.cache|default='1'}>">
+     data-url="<{$Think.config.auth.host}>/api.php/channel/sidebar?action=list&type=sidebar&poolid=<{$Think.config.auth.poolid|default=''}>&appid=<{$Think.config.auth.appid|default=''}>&roleid=<{$Request.session.union.roleid|default='404'}>&cache=<{$Request.get.cache|default='1'}>">
 </div>
 
 <div id="mk-collapse-menubar" class="collapse mk-collapse-container mk-menubar-top top-50px"
@@ -212,7 +212,7 @@
      data-project="<{$Request.server.script_name|substr='1','-4'|lower}>"
      data-controller="<{$Request.controller|lower}>"
      data-action="<{$Request.action|lower}>"
-     data-url="<{$Think.config.auth.host}>/api.php/ram/menubar?action=list&type=menubar&poolid=<{$Think.config.auth.poolid|default=''}>&appid=<{$Think.config.auth.appid|default=''}>&roleid=<{$Request.session.union.roleid|default='404'}>&cache=<{$Request.get.cache|default='1'}>">
+     data-url="<{$Think.config.auth.host}>/api.php/channel/menubar?action=list&type=menubar&poolid=<{$Think.config.auth.poolid|default=''}>&appid=<{$Think.config.auth.appid|default=''}>&roleid=<{$Request.session.union.roleid|default='404'}>&cache=<{$Request.get.cache|default='1'}>">
 </div>
 <script type="text/javascript">
     document.body.style.paddingTop = "50px";
