--- a/src/assets/tpl/navigation-transparent.htm
+++ b/src/assets/tpl/navigation-transparent.htm
@@ -2,7 +2,7 @@
 <header class="am-topbar am-topbar-inverse admin-header header-responsive">
     <nav class="nav-flex navigation-responsive am-collapse am-topbar-collapse pd0" id="topbar-collapse">
         <a class="nav-left figure flag-item -am-topbar-brand" href="javascript:void(0);">
-            <img class="logo filter-brightness-9" src="/static/logo_square_white.png" data-src="/static/logo.png" alt="Logo" title="<{$Think.config.app.title}>">
+            <img class="logo filter-brightness-9" src="/static/logo_square_white.png" data-src="/static/logo.png" alt="Logo" title="<{$Think.config.app.title|default=''}>">
         </a>
 
         <a class="nav-right -am-topbar-btn float-right am-dropdown-toggle tpl-header-list-link am-show-sm-only center wrap" href="javascript:void(0);" data-am-collapse="{target: '#topbar-collapse'}">
@@ -12,11 +12,9 @@
     </nav>
 
     <div class="float-right am-dropdown" data-am-dropdown data-am-dropdown-toggle>
-
         <ul class="am-dropdown-content">
-
             <li>
-                <a href="<{$Think.config.auth.host}>/account.php/home">
+                <a href="<{$Think.config.auth.host}>/console.php/console">
                     <{$Request.session.nickname|default='侠名'}>
                     （<{$Request.session.title|default=''}>）
                 </a>
@@ -26,9 +24,9 @@
             <{foreach $channel_nav as $key => $item}>
             <{if $item.menubar eq 1}>
             <li>
-                <a href="<{$Request.scheme}>://<{$item.host}><{$item.url}>">
-                    <span class="am-icon-<{$item.icon}>"></span>
-                    <{$item.title}>
+                <a href="<{$item.url|default=''}>">
+                    <span class="am-icon-<{$item.icon|default=''}>"></span>
+                    <{$item.title|default=''}>
                 </a>
                 <span class="tpl-dropdown-list-fr"></span>
             </li>
@@ -40,10 +38,21 @@
 </header>
 
 <script type="text/javascript">
+    document.body.style.paddingTop = "50px";
     $(document).ready(function () {
         if (window.top !== window.self) {
             top.location = self.location;
         }
+
+        /**========================== 构建侧边导航下拉列表 ==========================*/
+        /*
+        $("#collapse").collapse({
+            "title": "导航右侧按钮",
+            "name": "navright",
+            "action": "",
+            "data": "<{$Think.config.app.host}>/api.php/channel/channel",
+        });
+        */
 
         /**========================== 侧边导航下拉列表 ==========================*/
         $(document).on("click", ".nav-left", function (event) {
