--- a/src/assets/tpl/success.htm
+++ b/src/assets/tpl/success.htm
@@ -1,45 +1,19 @@
-<html lang="zh-cn">
+<html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>提示消息</title>
     <style type="text/css">
-        body {
-            font: 75% Arail;
-            text-align: center;
-        }
+        body{ font:75% Arail; text-align:center; }
 
-        #notice {
-            width: 300px;
-            border: 1px solid #BBB;
-            background: #EEE;
-            padding: 3px;
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            margin-left: -155px;
-            margin-top: -100px;
-        }
+        #notice{ width:300px;border:1px solid #BBB; background:#EEE; padding:3px; position:absolute; left:50%; top:50%; margin-left:-155px; margin-top:-100px; }
 
-        #notice div {
-            background: #FFF;
-            padding: 30px 0 20px;
-            font-size: 1.2em;
-            font-weight: bold
-        }
+        #notice div{ background:#FFF; padding:30px 0 20px; font-size:1.2em; font-weight:bold }
 
-        #notice p {
-            background: #FFF;
-            margin: 0;
-            padding: 0 0 20px;
-        }
+        #notice p{ background:#FFF; margin:0; padding:0 0 20px; }
 
-        a {
-            color: #f00
-        }
+        a{ color:#f00}
 
-        a:hover {
-            text-decoration: none;
-        }
+        a:hover{ text-decoration:none; }
     </style>
 </head>
 <body>
@@ -50,11 +24,11 @@
     <{else}>
     <p style="font:italic bold 2cm cursive,serif; color:red">×</p>
     <{/if}>
-    <p>在( <span id="sec" style="color:blue;font-weight:bold"><{$timeout}></span> )秒后自动跳转，或直接点击
+    <p>在( <span id="sec" style="color:blue;font-weight:bold"><{$timeout|default='0'}></span> )秒后自动跳转，或直接点击
         <a href="javascript:'<{$location}>'">这里</a> 跳转<br>
         <span style="display:block; text-decoration:underline; cursor:pointer; line-height:25px" onclick="stop(this)">停止</span>
     </p>
-    <input type="hidden" id="timeout" value="<{$timeout|default=60}>">
+    <input type="hidden" id="timeout" value="<{$timeout|default=0}>">
 </div>
 <script type="text/javascript">
     var seco = document.getElementById("sec");
